# QGEMM

./: .gitignore  BUILD_README.md  CMakeLists.txt  README.md  TechniqueReport.md  build.sh  develop.md  setup.py  test.sh
include/: blas.h  common.h  gemm.h  gpu_lib.h  gpu_type.h  timer.h
lib/: gemm_utilize.cuh
playground/: Makefile  print_layout.py  test.ldmatrix.layout.cu  test.movmatrix.cu
playground/output/: layout_analysis_report.md  report_ldmatrix.md  report_movmatrix.md
scripts/: README.md  benchmark_to_md.py
src/gemm/: sm80_gemm_kernel.cpp  sm80_gemm_kernel.cu  sm80_gemm_kernel_v1.cu  sm80_gemm_kernel_v2.cu  sm80_gemm_kernel_v3.1.cu  sm80_gemm_kernel_v3.cu  sm80_gemm_kernel_v4.cu  sm89_gemm_kernel.cpp  sm89_gemm_kernel.cu  sm89_gemm_kernel_v1.cu  sm89_gemm_kernel_v2.cu  sm89_gemm_kernel_v3.1.cu  sm89_gemm_kernel_v3.cu  sm89_gemm_kernel_v4.1.cu  sm89_gemm_kernel_v4.cu  sm89_gemm_kernel_v5.cu  test_cublas_gemm.cu  test_cutlass_gemm.cpp  test_cutlass_gemm.cu
src/include/: fast_quat.h  gemm_config.h  gemm_transpose.cuh  gemm_utilize.cuh  gemm_utils.cuh  matrix_transpose.h
src/mix_gemm/: hip_mix_gemm_kernel.cpp
src/transpose/: Makefile  transpose.cu
tests/: CMakeLists.txt  Makefile  PROJECT_OVERVIEW.md  README.md  benchmark.ipynb  cuda_benchmark.cpp  eval.py  gemm_benchmark.cpp  reference.py  task.yml  test.cpp  test.ipynb  test.sh  utils.py
tests/includes/: example_configs.h  simple_timer.h  test_config.h
triton/: fp8_gemm.py
